[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://bakugou_shine.wav" type="AudioStream" id=5]
[ext_resource path="res://explode.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 1 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( -2.36145, -0.209694 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 29
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -4.29278, -12.4975 )
polygon = PoolVector2Array( -5.73403, 12.1433, -0.79734, 12.1433, -0.368057, 4.84562, 1.99297, 5.70418, 2.63689, 9.56767, 7.14429, 9.56767, 6.71502, 6.56274, 5.85647, 6.56274, 5.42719, 4.63098, 3.06616, 4.20171, 2.85152, 1.4114, 3.49544, -2.88137, 8.00285, -5.02776, 8.00285, -11.0376, -6.59258, -12.5401, -4.01692, -4.1692, -1.01198, 2.4846 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.214638, -14.4293 )
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 16

[node name="enemydetector" type="Area2D" parent="."]
visible = false
position = Vector2( -2.36145, -0.209694 )
collision_mask = 14

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemydetector"]
polygon = PoolVector2Array( -7.24341, -0.699951, -7.50693, -10.7137, -13.8314, -19.6734, -13.3044, -26.5249, 6.19611, -27.0519, 11.203, -20.991, 9.88539, -17.3017, 8.30426, -12.0313, 6.98666, -7.28795, 6.98666, -3.07162, 6.98666, -0.699951 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.429276, -3.64886 )
stream = ExtResource( 3 )
volume_db = -22.213

[node name="ensquashleft" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
scale = Vector2( 6, 1 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="ensqaushright" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="kill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -9.087

[node name="fireposition" type="Position2D" parent="."]
position = Vector2( -3.16223, -6.32448 )
[connection signal="area_entered" from="enemydetector" to="." method="_on_enemydetector_area_entered"]
[connection signal="body_entered" from="enemydetector" to="." method="_on_enemydetector_body_entered"]
